--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     }
   ],
   "action": {
-    "default_popup": "settings.html",
+    "default_popup": "popup.html",
     "default_icon": "rome.png"
   }
 
