--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,8 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": "rome.png"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
-
 }
