--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "rome.png"
+    "default_icon": "shield.png"
   },
   "background": {
     "service_worker": "background.js"
